# emma

./: LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
demo/: moderation.ipynb  texification.ipynb
emma/: Moderator.py  Texificator.py  __init__.py
notebooks/: embeddings.ipynb  moderation.ipynb  texification.ipynb
src/emma/: __init__.py  moderator.py  texificator.py  vectorizer.py
