[project]
name = "emmalib"
requires-python = ">= 3.10"
dynamic = ["version"]
dependencies = [
    "torch==1.13.1+cu117",
    "transformers>=4.20.1",
    "transliterate==1.10.2",
    "sentence-transformers==2.7.0",
    "numpy<2.0.0",
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",
    "isort==5.13.2",
    "pytest==8.3.2",
    "pylint==3.2.7",
    "mypy==1.11.2",
]

[tool.isort]
profile = "black"
